--- a/Final Project/about.html
+++ b/Final Project/about.html
@@ -25,7 +25,7 @@
 		</header>
 
 		<main>
-			<div class = intro>
+			<div class = "intro">
 				<h2>About Alexandra Roumeliotis</h2>
 				<p>I was born in Montreal, Canada, and moved to San Francisco with my family when I was 1 years old. I loved growing up in San Francisco, as well as being constantly exposed to technology, where I found an interest and passion in computer science. However, my family and I continue to stay true to our roots, and spend Christmas with our family back in Canada. I am passionate about harnessing technology to solve real world problems. In high school, I created an nonprofit organization to expose underrepresented students in technology. My senior year of highschool, I built an application to diagnose my grandfather's rare brain disorder. I am passionate an interested about harnessing technology to solve accessibility and healthcare issues around the world.</p>
 			</div>
@@ -40,7 +40,32 @@
 				</ul>
 			</div>	
 
-			<div class = res-div>
+		
+
+			<div class = "passion1">
+				<h3>My Passion for Healthcare</h3>
+				<p>Something I am very passionate about is healthcare. I am very passionate about finding ways to increase ways that we can work to provide accessible healthcare to low income communities around the world. Furthermore, coupled with my passion for technology, I believe that we should find ways to increase healthcare accessibility using technology.</p>
+				<div class = "description">
+					<p>Watch an interesting youtube video below that demonstrates some of the technical innovations in healthcare!</p>
+				<div>
+				<div class = "video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/MReLj9yQWIA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+
+			<div class = "passion2">
+				<h3>My Passion for Technology</h3>
+				<p>Something I am also very passionate about is the rise of technology, including the rise of Artificial Intelligence. One of the ways I find my information on this is through the digital magazine, TechCrunch, which publishes articles and updates about new and innovative technology products, and what is going on with the tech world..</p>
+				<div class = "description">
+					<p>Below is an interesting tweet from TechCrunch. Like the tweet, follow them, or interact with their content to learn more!</p>
+				<div>
+				<div class = "feed">
+					<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sight Tech Global is Live! Join top AI technologists and accessibility innovators to discuss the future of assistive tech <a href="https://t.co/bLhvuqV7uM">https://t.co/bLhvuqV7uM</a> by <a href="https://twitter.com/neddesmond?ref_src=twsrc%5Etfw">@neddesmond</a></p>&mdash; TechCrunch (@TechCrunch) <a href="https://twitter.com/TechCrunch/status/1334198314179457024?ref_src=twsrc%5Etfw">December 2, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>	
+
+
+
+			<div class = "res-div">
 				<h3>My Resumé</h3>
 				<p>You can download my <a href = "images/alexandraresume.pdf">resumé in pdf format.</a></p>
 			</div>
