--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -43,6 +43,65 @@
 
 				</address>
 		
+			<h2>Talk Back:</h2>
+			<form class = "contact-form">
+				<p>Fill out this form to get in touch with me, and I will get back to you!</p>	
+				<fieldset class = "personal">
+					<legend>Personal Info</legend>
+					<div class ="items">
+						<!--https://www.kalzumeus.com/2010/06/17/falsehoods-programmers-believe-about-names/ -->
+						<div class = "item">
+							<label for = "fullname">Full Name:</label><br>
+							<input type="text" id="fullname" name = "user-fullname">
+						</div>
+						<div class = "item">
+							<label for = "eaddress">Email Address:</label><br>
+							<input type="email" id="eaddress" name = "user-eaddress" required>
+						</div>
+						<div class = "item">
+							<label for = "org">Organization:</label><br>
+							<input type="text" id="org" name = "user-org">
+						</div>
+						<div class = "item">
+							<label for = "phone">Phone Number:</label><br>
+							<input type="tel" id="phone" name = "user-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+							<span>Format: 123-123-1234</span>
+						</div>
+					</div>
+				</fieldset>
+
+				<fieldset class = "gender">
+					<legend>Gender</legend>
+					<input type="radio" id="male" name="user-gender" value="male">
+	  				<label for="male">Male</label>
+	 				<input type="radio" id="female" name="user-gender" value="female">
+	 				<label for="female">Female</label>
+	 			    <input type="radio" id="other" name="user-gender" value="other">
+	 				<label for="other">Other</label>
+	 				<input type="radio" id="silent" name="user-gender" value="silent">
+	 				<label for="other">Rather Not Say</label>
+	 				
+	 			</fieldset>
+
+	 			<fieldset class = "status">
+	 				<legend> Status </legend>
+	 				<p>Please check below which you most closely identify with.</p>
+	 				<input type="checkbox" id="student" name="user-student" value="student">
+	  				<label for="student"> I am a Student</label><br>
+	  				<input type="checkbox" id="employer" name="user-employer" value="employer">
+	  				<label for="employer"> I am an Employer</label><br>
+	 			    <input type="checkbox" id="other" name="user-other" value="other">
+	  			    <label for="other"> Other</label>
+	  			    <br>
+  			    </fieldset>
+
+  			    <input type="submit" value="Submit">
+			</form>
+
+
+
+
+
 </body>
 
 </html>
